--- a/task/static/css/style.css
+++ b/task/static/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .crd{
-    background-color: red;
+    background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;    
