--- a/task/templates/tasks/list.html
+++ b/task/templates/tasks/list.html
@@ -1,32 +1,36 @@
-
 {% extends 'tasks/base.html' %}
 
 {% block title %}home{% endblock title %}</title>
 {% block list %}
-    
-<div class="crd">
 
-  <div class="card w-50">
-    <div class="card-body">
-        <form action="" method='POST'>
-            {% csrf_token %}
-            {{form.title}}
-            <input type="submit" class='btn btn-primary' name='create_task'>
-        </form>
-        {% for task in tasks %}
-        <div class='tasks'>
-            {% if task.complete %}
-            <a href={% url 'update' task.id %}>
-            <div><p><button>{{ task }}</button class="btn btn-outline-danger del"> <a href= {% url 'delete' task.id %} >  Delete</a></span></p></a>
+<div class="card">
 
-            {% else %}
-
-            <a href={% url 'update' task.id %}>
-                <p>{{task}} <button class="btn btn-outline-danger del"><a href= {% url 'delete' task.id %} >  Delete</a></button></p></a>
-        {% endif %}</div>
-    {% endfor %} 
+  <div class="card_top">
+    <form action="" method='POST'>
+      {% csrf_token %}
+      {{form.title}}
+      <input type="submit" class='btn' name='create_task'>
+    </form>
     </div>
-  </div>
+    <div class="content">
+      {% for task in tasks %}
+      <div class='task'>
+        {% if task.complete %}
+        <a href={% url 'update' task.id %}>
+            {{ task }}
+            <button class="del hovr"> <a href={% url 'delete' task.id %}>
+            Delete</a></button></a>
+        </div>
+        {% else %}
+        <div class='task'>
+        <a href={% url 'update' task.id %}>
+          {{task}} <button class="del"><a href={% url 'delete' task.id %}> Delete</a></button>
+        </a>
+      </div>
+        {% endif %}
+      {% endfor %}
+    </div>
+</div>
 </div>
 
 
