--- a/task/templates/tasks/list.html
+++ b/task/templates/tasks/list.html
@@ -2,7 +2,7 @@
 
 {% block title %}home{% endblock title %}</title>
 {% block list %}
-
+<div class="container">
 <div class="card">
 
   <div class="card_top">
@@ -32,6 +32,5 @@
     </div>
 </div>
 </div>
-
 
 {% endblock list %}
